Added secret, added phys/caster holsters, some typos here and there are fixed.

--- a/src/content/docs/drs/holsters/melee.mdx
+++ b/src/content/docs/drs/holsters/melee.mdx
@@ -18,7 +18,7 @@ import Footer from "@components/Footer.astro";
 Melee DPS are the powerhouses of Delubrum Reginae. Along with being some of the highest DPS roles, they are given arguably the strongest (and easiest) to use actions.
 Both actions should be combined together every 2 minute window to maximize their effectiveness.
 
-Each holster is split into two sections, one as a "pre-load"  holster and a "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
+Each holster is split into two sections, one as a "pre-load"  holster and an "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
 The "instance ready" holster has _everything_ you will need for the entire instance. It should often contain extra reraisers, spare copies of lost actions you need, and light curtains. It is strongly encouraged that you fill your holster to as close as full as you can.
 
 Some suggestions on what to include to fill space: **Light Curtains**, extra **Resistance Reraisers**, and **Resistance Potions**.
@@ -351,7 +351,7 @@ Drop the reraisers and add two more **Banner of Honored Sacrifice**. You can res
 :::
 <br/><hr/>
 
-### Excellence Melee Battery
+### Physical Excellence Battery
 This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
 One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Banner of Honored Sacrifice** (keeping **Font of Power** still) and inform the raid with a message or marking yourself with a triangle head marker to
 signify that you are ready to be mimicked.
