--- a/src/content/docs/drs/holsters/caster.mdx
+++ b/src/content/docs/drs/holsters/caster.mdx
@@ -1,6 +1,629 @@
 ---
-title: Caster Holsters
-description: Flare Star is the best duelist
+title: Caster DPS
+description: Cure 4, Font of Magic, and Flare Star! Oh my!
 ---
 
-WIP
+import ActionIcon from '@components/ActionIcon.astro'
+import { Image } from 'astro:assets';
+import Footer from "@components/Footer.astro";
+
+<link
+  rel="stylesheet"
+  media="(prefers-color-scheme:dark)"
+  href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/dark.css"
+  onload="document.documentElement.classList.add('sl-theme-dark');"
+/>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
+
+Casters are the backbone of keeping the party topped off and providing some insane party wide damage buffs. Their core damage actions are also incredibly powerful in their own ways. Majority of people will suggest **Lost Chainspell** to newer players. It provides decent enough damage buff while granting full mobility due to the instant casts
+it provides. On the other hand, some will suggest bringing **Font of Magic** for it's incredibly strong damage buff. However, with **Font of Magic** you run the risk of running out of MP. So to supplement you *must* bring **Resistance Ether Kits** to help mitigate the MP costs.
+
+Your **Pure Essence of the Elder** synergizes with **Lost Cure 4** to grant anyone affected a **10% Bravery damage buff**. It cannot understated how strong this synergy is. Because ontop of that damage buff with Endwalker's release and the squishing of stats, it has turned **Lost Cure 4** into a powerhouse of a healing
+tool too. Essentially giving the party a benediction each time it's pressed. So, every time the party takes damage you should be pressing **Lost Cure 4** to help your healers top the party off and refresh everyone's bravery timer. 
+
+:::tip[Lost Bravery v. Cure 4]
+**Lost Bravery**, the castable 10m damage buff, only provides a 5% damage increase compared to Elder Cure 4's 10%. There is no reason to be using **Lost Bravery** inside of Delubrum Savage unless you are doing some sort of challenge run.
+:::
+
+Each holster is split into two sections, one as a "pre-load"  holster and an "instance ready" holster. The "pre-load" is for when you first get into the instance. It will contain your pure essence, reraiser, and actions that you will slot in or refresh charges on.
+The "instance ready" holster has _everything_ you will need for the entire instance. It should often contain extra reraisers, spare copies of lost actions you need, and light curtains. It is strongly encouraged that you fill your holster to as close as full as you can.
+
+Some suggestions on what to include to fill space: **Light Curtains**, extra **Resistance Reraisers**, and **Resistance Potions**.
+
+:::note[Pure Essences]
+You will only need **one** pure essence each time you enter Delubrum Reginae. Essences do persist through death and are only removed if you remove the buff yourself or you leave the instance.
+:::
+<br/><hr/>
+
+### Chainspell Cure 4 Holster
+The basline caster holster. Packing both **Chainspell** and **Cure 4** for the whole instance as it's just that shrimple. **Chainspell** has 20 uses so it will last you the entire instance, no need to bring a second copy of it! As a reminder, please make sure to drift **Chainspell** into the 2 minute buff window as you want to stack
+as many buffs as possible into that short timeframe. **Chainspell** does increase the cost of your spells, but it's nothing that using Lucid Dreaming on cooldown won't fix.
+
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/chainspell.png"/></td>
+      <td colspan="3">**Lost Chainspell**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure4.png"/></td>
+      <td colspan="3">**Lost Cure 4**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure4.png"/></td>
+      <td>**Lost Cure 4**</td>
+      <td>3</td>
+      <td>15</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>10</td>
+      <td>80</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>4</td>
+      <td>4</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+<br/><hr/>
+
+### Font of Magic Cure 4 Holster
+This is another basline caster holster. Packing both **Font of Magic** and **Cure 4**. However, due to **Font of Magic's** heavy MP drain, you *need* to bring **Resistance Ether Kits** and keep a close eye on your MP.
+Use **Lucid Dreaming** whenever and also try to keep high uptime on your **Ether Kits** when possible. If you're lucky, a healer will use **Lost Fullcure** and that will solve a majority of your MP problems. But do not bank on this
+during an anyprog environment.
+
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure4.png"/></td>
+      <td colspan="3">**Lost Cure 4**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td >**Lost Font of Magic**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure4.png"/></td>
+      <td>**Lost Cure 4**</td>
+      <td>3</td>
+      <td>15</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>3</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>11</td>
+      <td>33</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::danger[Ether Kits and Font of Magic]
+It cannot be stated enough, please make sure that you are stacking as many ether kits as comfortably possible. The MP drain is not a joke and if you are not careful you can and will run out of MP.
+Do not take this as a deterrent, take it as a precaution ahead of time.
+:::
+<br/><hr/>
+
+### Beginner's Lost Flare Star
+The almighty **Lost Flare Star** is the _most powerful_ role in the instance (outside of the duelist). Only **one** person can bring it as any others will just overwrite each other. The Flare Star's job is to be putting out as much damage as they can no matter what.
+Any and all party buffs should be funneled into you. **Font of Magic** is generally the only viable option, outside of extra overslotting, to pair with **Lost Flare Star** as **Chainspell** increases the cost to an unobtainable amount of MP.
+
+It cannot be stressed enough that you should **not** be using **Lost Chainspell** when using **Flare Star.** It makes **Flare Star** unuseable when under the effects of **Chainspell** due to the increased MP cost.
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/flare.png"/></td>
+      <td colspan="3">**Lost Flare Star**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td >**Lost Font of Magic**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>3</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>16</td>
+      <td>48</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::danger[The Mighty Flare Star]
+Please treat this role with as much respect as possible. A proficient Flare Star user can absolutely **carry** and make the DPS checks trivial. Only one person should be assigned to bring this action.
+:::
+<br/><hr/>
+
+### Beginner Mimic Holster
+This holster will help you understand the signifigance and power of the **Mimic** action. It also has some extra wiggle room to maybe try out "Excellence Chaining". The main goal is for you to just see how **Mimic** works.
+If you're looking for guides on how to Mimic, please see the note below the holsters. If you're looking for a guide on how to Excellence Chain, please see: \<link goes here\>
+
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/cure4.png"/></td>
+      <td colspan="3">**Lost Cure 4**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>2</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/cure4.png"/></td>
+      <td>**Lost Cure 4**</td>
+      <td>3</td>
+      <td>15</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>6</td>
+      <td>48</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>10</td>
+      <td>30</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>95</td>
+    </tr>
+  </table>
+</div>
+:::caution[How To Mimic]
+<ActionIcon icon="mimic"/>**Mimic** is used to copy the actions of another player _and_ fully refresh your actions at the same time! To use it, first slot in <ActionIcon icon="mimic"/>**Mimic** and target the player you wish to copy the actions from.
+**Before you use <ActionIcon icon="mimic"/>Mimic**, double check their **Reminiscence** buff! Doing this will ensure you are getting the correct actions. Once ready, use <ActionIcon icon="mimic"/>**Mimic!** After a nifty animation, you'll recieve **both** actions the target had and full charges of both!
+
+**Extra note:** The target will not be effected in anyway. This is how many Delubrum Savage reclears will often smuggle heavier action combinations through the entire instance.
+:::
+<br/><hr/>
+
+### Excellence Cure 4 Caster
+This is truly the easiest and most effective way to output as much DPS as you can on **any role**, outside of one exception. While this is a rather heavy and expensive bag, it's effects cannot be understated. Mimic is used before every major Non-Trinity Seeker fight to
+refresh **Font of Power** and get **Lost Excellence** back. 
+
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Cure 4**, and slot it [the banner] over Excellence. Once done, you can press **Font of Power** and **Lost Cure 4**
+together. From there, the fight will proceed as normal with you pressing Font/Banner during every **2 minute** raid buff window.
+
+It is important that you overslot **Excellence** with your **Lost Cure 4**. Holding **Excellence** through the whole instance is a massive DPS loss and also could potentially waste the assigned batteries's Excellence plates. 
+
+**Reminder:** Mimic does not work in combat.
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/excellence.png"/></td>
+      <td colspan="3">**Lost Excellence**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>3</td>
+      <td>36</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/cure4.png"/></td>
+      <td>**Lost Cure 4**</td>
+      <td>4</td>
+      <td>40</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>2</td>
+      <td>16</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>8</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>3</td>
+      <td>3</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::tip[Free Cure 4 time? Yes please!]
+Instead of slotting **Mimic** over **Cure 4** consider putting it over your **Font of Magic** instead! This way you can press use **Lost Cure 4** during the countdown and _then_ mimic your correct actions before engaging. This 
+will extend the cure4 window significantly and reduce a lot of the stress of overslotting buffs quickly!
+
+Remember, **Mimic** does not work in combat!
+:::
+<br/><hr/>
+
+### Magical Excellence Battery
+This holster helps carry **Lost Excellence** through the entire instance. Three players will be volunteer/assigned to carry an extra plate of Excellence to slot in at an assigned fight.
+One will carry it for Queen's Guard, Trinity Avowed, and The Queen. Once you have arrived at your assigned fight: slot in **Lost Excellence** over **Lost Cure 4** (keeping **Font of Magic** still) and inform the raid with a message or marking yourself with a triangle head marker to
+signify that you are ready to be mimicked.
+
+During the opener, you will press **Lost Excellence** after your first GCD. You will open your holster, select **Lost Cure 4**, and slot it [cure4] over Excellence. Once done, you can press **Font of Magic** and **Lost Cure 4**
+together. From there, the fight will go on with you pressing Font/cure4 during every **2 minute** raid buff window as you normally would.
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/excellence.png"/></td>
+      <td colspan="3">**Lost Excellence**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/excellence.png"/></td>
+      <td>**Lost Excellence**</td>
+      <td>1</td>
+      <td>25</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/cure4.png"/></td>
+      <td>**Lost Cure 4**</td>
+      <td>4</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/mimic.png"/></td>
+      <td>**Mimic**</td>
+      <td>2</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Resistance Reraiser**</td>
+      <td>1</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>4</td>
+      <td>12</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::danger[Slotting Excellence]
+Make sure to slot in your Excellence at the assigned fight! Slotting it any earlier could cause some awkwardness and force you to hold off on overslotting Excellence for an amount of time.
+:::
+<br/><hr/>
+
+### Excellence Flare Star
+This is the real deal. You will do so much damage that you might even keep up with the duelist. Treat this bag with care and make sure you are putting **Flare Star** under every buff you can. You should
+see if your healer can bring **Lost Full Cure** to help supplement MP and as many extra **Ether Kits** as possible.
+
+<div class="two-holster-tables">
+  <table class="caster">
+  <caption>**Pre-load**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="4">Lost Action</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/fom.png"/></td>
+      <td colspan="3">**Lost Font of Magic**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/flare.png"/></td>
+      <td colspan="3">**Lost Flare Star**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/elder.png"/></td>
+      <td colspan="3">**Pure Essence of the Elder**</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td colspan="3">**Resistance Reraiser**</td>
+    </tr>
+  </table>
+
+  <table class="caster">
+  <caption>**Instance Ready**</caption>
+      <col width="60px" />
+      <col width="275px" />
+      <col width="20px" />
+      <col width="20px" />
+    <tr>
+      <th colspan="2">Lost Action</th>
+      <th>Qty.</th>
+      <th>Wt.</th>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/flare.png"/></td>
+      <td >**Lost Flare Star**</td>
+      <td>3</td>
+      <td>60</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/reraiser.png"/></td>
+      <td>**Mimic**</td>
+      <td>2</td>
+      <td>24</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="40" height="40" src="/drs/actions/etherkit.png"/></td>
+      <td>**Resistance Ether Kit**</td>
+      <td>4</td>
+      <td>12</td>
+    </tr>
+    <tr>
+      <td><Image alt="icon" loading="eager" width="45" height="40" src="/drs/actions/curtain.png"/></td>
+      <td>**Light Curtain**</td>
+      <td>3</td>
+      <td>3</td>
+    </tr>
+    <tr style="background-color: transparent">
+      <td style="border: none;"/>
+      <td colspan="2" style="text-align: right; border: none;">**Total Weight:**</td>
+      <td>99</td>
+    </tr>
+  </table>
+</div>
+:::danger[The Mighty Flare Star]
+Please treat this role with as much respect as possible. A proficient Flare Star user can absolutely **carry** and make the DPS checks trivial. Only one person should be assigned to bring this action.
+:::
+
+<Footer />
